<resources>
    <string name="app_name">secretary-mobile</string>
    <string name="btn_upload_label">import</string>
    <string name="btn_filters_label">filters</string>
    <string name="btn_submit_label">submit</string>
    <string name="btn_return_label">return</string>
    <string name="edittext_name_label">https://raw.githubusercontent.com/mmorawski520/secretariat/master/exportedData.txt</string>
    <string name="textview_upload_file_label">file url</string>
    <string name="textview_table_selection_label">select table</string>
    <string name="textview_table_search_label">search</string>
    <string name="textview_table_order_by_label">order by</string>
    <string name="employees">employees</string>
    <string name="teachers">teachers</string>
    <string name="younger">younger than : </string>
    <string name="older">older than : </string>
    <string name="students">students</string>
    <string name="click_me">click me</string>
    <string name="pick_date">Pick Date</string>
    <string name="change_date">Change Date</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO2</string>
    <string name="card_are_scrollable">card are scrollable</string>
</resources>